# fuse-adapter

./: .gitignore  Cargo.toml  Makefile  README.md  config.example.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e-tests.yml  release.yml
.harness/: tasks.db
config/: gdrive-http.yaml  gdrive-service-account.yaml  gdrive.yaml  s3-localstack.yaml  s3.yaml  test.yaml
docs/: CONNECTOR_SKILL.md
examples/: test_gdrive.rs
scripts/: test-harness.sh  verify-sync.sh  wait-for-minio.sh
scripts/tests/: 01-basic-crud.sh  02-directories.sh  03-permissions.sh  04-large-files.sh  05-concurrent.sh  06-error-cases.sh  07-persistence.sh  08-read-only.sh  09-uid-gid.sh  10-complex-nested.sh  common.sh
src/: config.rs  env.rs  error.rs  lib.rs  main.rs  mount.rs
src/auth/: http.rs  mod.rs  service_account.rs  static_token.rs
src/cache/: filesystem.rs  memory.rs  mod.rs  none.rs
src/connector/: gdrive.rs  mod.rs  s3.rs
src/fuse/: inode.rs  mod.rs
src/overlay/: mod.rs  status.rs
tests/e2e/: Cargo.toml
tests/e2e/benches/: metadata.rs  read.rs  write.rs
tests/e2e/src/: assertions.rs  config.rs  harness.rs  lib.rs  minio.rs  mount.rs
tests/e2e/tests/: cache_basic.rs  cache_concurrent.rs  cache_limits.rs  cache_sync.rs  error_mode.rs  fuse_semantics.rs  mount_config.rs  s3_crud.rs  s3_directories.rs  s3_large_files.rs  s3_permissions.rs  s3_symlinks.rs  status_overlay.rs
tests/e2e/tests/common/: mod.rs
