[package]
name = "fuse-adapter"
version = "0.1.0"
edition = "2021"
description = "A FUSE filesystem framework with pluggable connector architecture"
license = "MIT"
readme = "README.md"

[dependencies]
# FUSE bindings
fuser = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
bytes = "1"
dashmap = "5"

# AWS S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Google Drive
google-drive3 = "6"
hyper = "1"
hyper-rustls = { version = "0.27", features = ["http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
chrono = "0.4"

# Time handling
humantime-serde = "1"

# Signal handling
ctrlc = "3"

# Utilities
libc = "0.2"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
