[package]
name = "fuse-adapter"
version = "0.2.4"
edition = "2021"
description = "A FUSE filesystem framework with pluggable connector architecture"
license = "MIT"
readme = "README.md"

[dependencies]
# FUSE bindings
fuser = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
bytes = "1"
dashmap = "5"

# AWS S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Google Drive
google-drive3 = "6"
hyper = "1"
hyper-rustls = { version = "0.27", features = ["http2", "ring", "native-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
chrono = "0.4"

# Time handling
humantime-serde = "1"

# HTTP client for token providers
reqwest = { version = "0.12", features = ["json"] }

# Environment variable substitution
regex = "1"
once_cell = "1"

# Google APIs common traits (must match google-drive3's version)
google-apis-common = "7"

# Signal handling
ctrlc = "3"

# Utilities
libc = "0.2"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
