[package]
name = "fuse-adapter-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Filesystem utilities
tempfile = "3"

# Randomness
rand = "0.8"

# Config generation
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Unique identifiers
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Docker API for MinIO management
bollard = "0.18"

# Unix utilities (signals, mount detection)
nix = { version = "0.29", features = ["signal", "fs"] }
libc = "0.2"

# AWS S3 client for direct verification
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Futures utilities
futures = "0.3"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Parameterized tests
test-case = "3"

[features]
default = []
stress = []  # Enable long-running stress tests

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "metadata"
harness = false
